# kompilator

./: README.md  notes.md
resources/: notes.md
resources/labor4/: COND_TEST.imp  mytest0.imp  mytest1.imp  program0.imp
resources/labor4/examples2022/: example1.imp  example2.imp  example3.imp  example4.imp  example5.imp  mytest0.imp
resources/labor4/maszyna_wirtualna/output/: GT_example2.imp  GT_example3.imp  GT_example4.imp  GT_mytest0.imp  op_example1.imp  op_example4.imp  op_example5.imp  op_mytest0.imp
src/: CMakeLists.txt  basic_blocks.cc  basic_blocks.h  compiler.cc  compiler.h  handler.cc  handler.h  main.cc  mult_div.cc  mult_div.h  test.sh  variables.cc  variables.h
src/basic_blocks/: basic_blocks.cc  basic_blocks.h  commands.cc  conditions.cc  expressions.cc
src/lexer/: lexer.l
src/parser/: parser.y
